src/public/assets/stylesheets/index.css
/* -------------------  MOBILE  --------------------- */


body {
  display: flex;
  flex-direction: column;
  font-family: Arial;
  min-height: 100vh;
}


header {
  /* header styles */
}

main {
  flex: 1;
  padding: 20px;
}

footer {
  /* footer styles */
}

/* -------------------  TABLET  --------------------- */
@media (min-width: 768px) {
  /* use mobile */
}

/* -------------------  DESKTOP  -------------------- */

@media (min-width: 1224px) {
  /* use mobile */
}

/* -------------------  LARGE SCREENS  -------------- */

@media (min-width: 1824px) {
  /* use mobile */
}




.roverImg {
  width: 300px;
  padding: 20px;
}

